<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usernameTitle"
                android:layout_width="281dp"
                android:layout_height="98dp"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="username"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="45sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:src="@drawable/logo" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/accountTitle"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/account"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/accountNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="start"
                android:text="account"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/balanceTitle"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/balance"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/balanceTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="start"
                android:text="balance"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp" />

        </LinearLayout>

        <ListView
            android:id="@+id/historyList"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:divider="@color/colorAccent"
            android:dividerHeight="1dp"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"></ListView>

        <Button
            android:id="@+id/buttonTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/transaction"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textViewLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/logout"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</ScrollView>